Thu Jun 30 17:33:25 2011  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (ObjectSpace.count_tdata_objects): 
	  Fix rdoc.  Fixes Bug #3892.

	* ext/objspace/objspace.c (ObjectSpace.count_tdata_objects): 
	  Change key type if the klass of a object is zero (internal object).
	  Read rdoc for details.

	* internal.h: export rb_objspace_data_type_name().

Thu Jun 30 17:25:08 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (ping_signal_thread_list, thread_timer): 
	  fix to keep polling state if there are any ping-tasks.

Thu Jun 30 12:25:34 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (rb_thread_create_timer_thread): allocate
	  machine stack for the timer thread at least 12KB.  FreeBSD 8.2
	  AMD64 causes machine stack overflow (SIGSEGV) only with
	  PTHREAD_STACK_MIN (maybe defined as 2KB).

Thu Jun 30 09:36:37 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/weakref.rb:  Attach documentation to WeakRef and add missing
	  documentation

Thu Jun 30 09:30:14 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/yaml.rb:  Document toplevel YAML and YAML::ENGINE to describe
	  Psych vs Syck engines.

Thu Jun 30 09:21:52 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/cmath.rb:  Hide handle_no_method_error from RDoc.
	* error.c:  Document or hide undocumented error classes.

Thu Jun 30 07:49:04 2011  Eric Hodel  <drbrain@segment7.net>

	* hash.c:  Document ENV

Thu Jun 30 06:37:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): ensure RUBYLIB_PREFIX stored
	  before RUBYLIB, even if MANGLED_PATH is enabled.  fixed #1679.
	  MANGLED_PATH is disabled by the default and will be removed
	  completely in the future.

Thu Jun 30 06:32:21 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/drb/drb.rb:  Hide deprecated toplevel DRb constants.

Thu Jun 30 06:17:02 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cmath.rb (CMath.log): second argument: b can be nil.
